(split)Fixed extra spacing in lists.

--- a/compass/src/main.scss
+++ b/compass/src/main.scss
@@ -197,6 +197,21 @@ article section.article-content {
         overflow: auto;
         padding: 10px;
     }
+    li p:first-child {
+        margin-top: 0;
+    }
+    li p:last-child {
+        margin-bottom: 0;
+    }
+    li {
+        margin: 30px auto;
+    }
+    li:first-child {
+        margin-top: 0;
+    }
+    li:last-child {
+        margin-bottom: 0;
+    }
 }
 
 header {
